crates/plotnik-lib/tests/02-parser/recovery_unclosed/nested_unclosed_skips_closed_pair.txt
(a (b (c)
------------------ DIAGNOSTICS -------------------
error: missing closing `)`
 --> query.ptk:1:4
  |
1 | (a (b (c)
  |    -^^^^^
  |    |
  |    node started here
  |
help: add `)` to close the node
